tests/neg/i4247b.scala
class Foo[U] { self : Array[U] & Nothing =>
  self(0) = ??? // error: Array type conflict with Foo
}
